Bug 69280 - UI: Comments toggle button should be on the left side of the ruler when locale set to RTL language
Summary: UI: Comments toggle button should be on the left side of the ruler when local...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other Linux (All)
: medium minor
Assignee: Not Assigned
URL: https://nailgenie.org
Whiteboard: target:4.2.0
Keywords: bisected
Depends on:
Blocks: Writer-Comments RTL-UI
  Show dependency treegraph
 
Reported: 2013-09-12 17:00 UTC by Maxim Monastirsky
Modified: 2025-12-20 15:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (Fedora 19) (57.46 KB, image/png)
2013-09-12 17:00 UTC, Maxim Monastirsky
Details
screenshot with RTL paragraph (Fedora 19) (59.92 KB, image/png)
2013-09-15 16:10 UTC, Maxim Monastirsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2013-09-12 17:00:56 UTC
Created attachment 85729 [details]
screenshot (Fedora 19)

Steps to reproduce:
1) Set locale to some RTL language (like Arabic or Hebrew) (through Tools->Options...->Language settings->Languages->locale setting)
2) Open Writer and add comment (Insert->Comment)
3) As you can see the comment appears on the left side of the page, while the toggle button (which was added due to bug 38246) appears on the right side of the ruler, not above the comments.

Tested with LO 4.1.1.2 under both Ubuntu 13.10 & Fedora 19.
Comment 1 Maxim Monastirsky 2013-09-15 16:10:45 UTC
Created attachment 85871 [details]
screenshot with RTL paragraph (Fedora 19)

Also please note that when paragraph's direction is RTL, you don't see the tab
icon on the top ruler (probably because comments toggle button covering it, or pushing it too much to right). So it's missing functionality, not just cosmetic issue.
Comment 2 Lior Kaplan 2013-09-15 21:08:21 UTC
Bug confirmed (4.1.1.2 on Debian 64bit). The tab icon is available if you zoom out a little (meaning it's there, but covered as you thought).
Comment 3 Commit Notification 2013-09-18 10:47:22 UTC
Abdulaziz A Alayed committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d86a72b64f208fe55f302d9fd8a7f578a4275bb8

fdo#69280 fixing comments toggle button position when local



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Lior Kaplan 2013-09-20 18:43:37 UTC
Fix verified on a build from master.
Comment 5 DANISA 2024-11-11 02:59:03 UTC Comment hidden (spam)
Comment 6 Sprunki Phase 5 2024-11-12 13:34:44 UTC Comment hidden (spam)
Comment 7 Sprunki Phase 5 2024-11-12 13:35:28 UTC Comment hidden (spam)
Comment 8 Sprunki Phase 5 2024-11-12 17:00:24 UTC Comment hidden (spam)
Comment 9 Sprunki Phase 5 2024-11-18 07:34:07 UTC Comment hidden (spam)
Comment 10 hi 2024-11-20 03:10:23 UTC Comment hidden (spam)
Comment 11 zf4157375691 2024-11-26 09:28:51 UTC Comment hidden (spam)
Comment 12 hi 2024-11-27 07:07:23 UTC Comment hidden (spam)
Comment 13 xing xing 2024-11-27 14:51:09 UTC Comment hidden (spam)
Comment 14 ratanageel 2024-11-29 03:50:03 UTC Comment hidden (spam)
Comment 15 Tyler Marc 2024-11-30 08:24:21 UTC Comment hidden (spam)
Comment 16 zf4157375691 2024-12-01 07:49:53 UTC Comment hidden (spam)
Comment 17 zf4157375691 2024-12-06 02:42:34 UTC Comment hidden (spam)
Comment 18 zf4157375691 2024-12-06 02:43:30 UTC Comment hidden (spam)
Comment 19 poe2game 2024-12-06 03:32:08 UTC Comment hidden (spam)
Comment 20 xing xing 2024-12-08 06:57:38 UTC Comment hidden (spam)
Comment 21 shiyun302 2024-12-13 18:34:32 UTC Comment hidden (spam)
Comment 22 zf4157375691 2024-12-16 07:34:14 UTC Comment hidden (spam)
Comment 23 jerrylearner 2024-12-17 03:48:15 UTC Comment hidden (spam)
Comment 24 jerrylearner 2024-12-17 03:53:56 UTC Comment hidden (spam)
Comment 25 Anna 2024-12-17 08:29:43 UTC Comment hidden (spam)
Comment 26 yxchen1994 2024-12-17 13:08:32 UTC Comment hidden (spam)
Comment 27 playsprunkigame 2024-12-20 19:36:01 UTC Comment hidden (spam)
Comment 28 yxchen1994 2024-12-21 08:35:04 UTC Comment hidden (spam)
Comment 29 yxchen1994 2024-12-21 08:35:28 UTC Comment hidden (spam)
Comment 30 yxchen1994 2024-12-21 08:35:36 UTC Comment hidden (spam)
Comment 31 Pavan Koli 2024-12-24 08:18:13 UTC Comment hidden (spam)
Comment 32 emiliar 2024-12-25 07:29:13 UTC Comment hidden (spam)
Comment 33 liqiaoa@gmail.com 2024-12-26 03:40:26 UTC Comment hidden (spam)
Comment 34 liqiaoa@gmail.com 2024-12-28 05:07:33 UTC Comment hidden (spam)
Comment 35 poe2game 2024-12-30 11:04:58 UTC Comment hidden (spam)
Comment 36 zf4157375691 2025-01-02 01:58:32 UTC Comment hidden (spam)
Comment 37 jackmeng 2025-01-04 09:08:32 UTC Comment hidden (spam)
Comment 38 lucky901 2025-01-04 09:46:56 UTC Comment hidden (spam)
Comment 39 modao526 2025-01-04 11:28:08 UTC Comment hidden (spam)
Comment 40 liqiaoa@gmail.com 2025-01-04 12:14:35 UTC Comment hidden (spam)
Comment 41 liqiaoa@gmail.com 2025-01-04 12:14:59 UTC Comment hidden (spam)
Comment 42 liqiaoa@gmail.com 2025-01-04 12:15:10 UTC Comment hidden (spam)
Comment 43 liqiaoa@gmail.com 2025-01-04 12:15:18 UTC Comment hidden (spam)
Comment 44 liqiaoa@gmail.com 2025-01-04 12:15:25 UTC Comment hidden (spam)
Comment 45 liqiaoa@gmail.com 2025-01-04 12:15:31 UTC Comment hidden (spam)
Comment 46 dond 2025-01-04 13:30:05 UTC Comment hidden (spam)
Comment 47 Anna 2025-01-06 04:11:06 UTC Comment hidden (spam)
Comment 48 poe2game 2025-01-11 07:34:16 UTC Comment hidden (spam)
Comment 49 poe2game 2025-01-11 07:34:28 UTC Comment hidden (spam)
Comment 50 modao526 2025-01-11 10:51:36 UTC Comment hidden (spam)
Comment 51 corrupt-box.net 2025-01-13 05:00:30 UTC Comment hidden (spam)
Comment 52 poe2game 2025-01-13 13:20:11 UTC Comment hidden (spam)
Comment 53 Flynn Brown 2025-01-13 14:49:33 UTC Comment hidden (spam)
Comment 54 biang 2025-01-14 07:34:45 UTC Comment hidden (spam)
Comment 55 biang 2025-01-14 07:35:11 UTC Comment hidden (spam)
Comment 56 kevinq 2025-01-14 15:08:19 UTC Comment hidden (spam)
Comment 57 kevinq 2025-01-14 15:10:16 UTC Comment hidden (spam)
Comment 58 sebasteanwu 2025-01-15 08:36:06 UTC Comment hidden (spam)
Comment 60 Queensland 2025-01-15 15:21:53 UTC Comment hidden (spam)
Comment 61 Queensland 2025-01-15 15:22:21 UTC Comment hidden (obsolete, Spam)
Comment 62 hi 2025-01-17 05:40:29 UTC Comment hidden (spam)
Comment 63 poe2game 2025-01-17 12:02:27 UTC Comment hidden (spam)
Comment 64 ttman 2025-01-20 09:52:40 UTC Comment hidden (spam)
Comment 65 zf4157375691 2025-01-24 00:56:19 UTC Comment hidden (spam)
Comment 66 zf4157375691 2025-01-24 00:56:45 UTC Comment hidden (spam)
Comment 67 jackylee2048 2025-01-29 05:59:19 UTC Comment hidden (spam)
Comment 68 Ike 2025-01-30 12:32:50 UTC Comment hidden (spam)
Comment 69 KKKsen 2025-02-01 05:11:03 UTC Comment hidden (spam)
Comment 70 corrupt-box.net 2025-02-06 10:11:50 UTC Comment hidden (spam)
Comment 71 poe2game 2025-02-06 15:30:51 UTC Comment hidden (spam)
Comment 72 poe2game 2025-02-06 15:31:07 UTC Comment hidden (spam)
Comment 73 ratanageel 2025-02-15 03:12:41 UTC Comment hidden (spam)
Comment 74 yxchen1994 2025-02-16 03:03:36 UTC Comment hidden (spam)
Comment 75 poe2game 2025-02-24 09:23:55 UTC Comment hidden (spam)
Comment 76 mozhenhuamo@gmail.com 2025-03-02 03:25:31 UTC Comment hidden (spam)
Comment 77 flykey 2025-03-04 02:11:33 UTC Comment hidden (spam)
Comment 78 flykey 2025-03-04 02:14:05 UTC Comment hidden (spam)
Comment 79 flykey 2025-03-04 02:15:12 UTC Comment hidden (spam)
Comment 80 mozhenhuamo@gmail.com 2025-03-04 14:25:43 UTC Comment hidden (spam)
Comment 81 corrupt-box.net 2025-03-05 05:28:24 UTC Comment hidden (spam)
Comment 82 Queensland 2025-03-06 04:02:33 UTC Comment hidden (spam)
Comment 83 jackylee2048 2025-03-08 03:35:23 UTC Comment hidden (spam)
Comment 84 Helen 2025-03-09 07:00:26 UTC Comment hidden (spam)
Comment 85 Jasgoo 2025-03-12 08:05:06 UTC Comment hidden (spam)
Comment 86 corrupt-box.net 2025-03-16 13:45:00 UTC Comment hidden (spam)
Comment 87 corrupt-box.net 2025-03-16 13:45:20 UTC Comment hidden (spam)
Comment 88 corrupt-box.net 2025-03-16 13:45:38 UTC Comment hidden (spam)
Comment 89 poe2game 2025-03-19 09:06:13 UTC Comment hidden (spam)
Comment 90 poe2game 2025-03-19 09:06:58 UTC Comment hidden (spam)
Comment 91 Twikado 2025-03-22 13:21:07 UTC Comment hidden (spam)
Comment 92 jackylee2048 2025-03-25 01:17:43 UTC Comment hidden (spam)
Comment 93 yxchen1994 2025-03-26 08:26:01 UTC Comment hidden (spam)
Comment 94 ych 2025-03-26 15:20:52 UTC Comment hidden (spam)
Comment 95 ych 2025-03-28 02:43:22 UTC Comment hidden (spam)
Comment 96 Vaienkas Olimeas 2025-03-28 10:48:10 UTC Comment hidden (spam)
Comment 97 mrwind 2025-03-28 14:43:54 UTC Comment hidden (spam)
Comment 98 yxchen1994 2025-04-01 01:39:29 UTC Comment hidden (spam)
Comment 99 ych 2025-04-01 07:26:18 UTC Comment hidden (spam)
Comment 100 lilinke 2025-04-01 09:43:54 UTC Comment hidden (spam)
Comment 101 zf4157375691 2025-04-02 08:04:53 UTC Comment hidden (spam)
Comment 102 corrupt-box.net 2025-04-09 13:59:30 UTC Comment hidden (spam)
Comment 103 poe2game 2025-04-10 10:02:32 UTC Comment hidden (spam)
Comment 104 Davi Mariya 2025-04-11 11:11:33 UTC Comment hidden (spam)
Comment 105 zf4157375691 2025-04-18 06:20:06 UTC Comment hidden (spam)
Comment 106 Fookingedchi 2025-12-20 10:13:16 UTC Comment hidden (spam)