fdo#69280 fixing comments toggle button position when local

set to RTL language

Change-Id: I0c133e3bbb6801f56e9ac0f508961bfa07a19523

Conflicts:
	svtools/source/control/ruler.cxx